--- a/css/style.css
+++ b/css/style.css
@@ -429,7 +429,7 @@ nav.show div.icon-close {
 #testimonials cite img {
   width: 2rem;
   height: 2rem;
-  object-fit: cover; /*Ele faz a img ou o que alimentar com isso e faz cabrir o espaço que tem*/
+  object-fit: cover; /*Ele faz a img ou o que alimentar com isso, caber no espaço que tem*/
   clip-path: circle(); /*Pensei que fariamos com o radius*/
   margin-right: 0.5rem;
 }
@@ -545,6 +545,54 @@ footer .social a:hover {
 @media (min-width: 1200px) {
   /*####################ARRUMANDO ESPAÇOS DAS PAGINAS#########################*/
   /*####################ARRUMANDO ESPAÇOS DAS PAGINAS#########################*/
+  /*AQUI INICIA OS TESTE*/
+  #header .interruptor {
+    justify-items: center;
+    align-items: center;
+    grid-auto-flow: column;
+    gap: 1rem;
+  }
+  .switch {
+    display: block;
+    position: relative;
+    width: 2rem;
+    height: 1rem;
+  }
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: white;
+    transition: 0.3s;
+    border: 0.29rem solid white;
+    box-shadow: 0.06rem 0.06rem 0.06rem rgba(0, 0, 0, 0.1);
+  }
+  .slider::before {
+    position: absolute;
+    content: '';
+    bottom: 0.875rem;
+    top: 0.5rem;
+    background-color: lightgray;
+    transition: 0.5s;
+  }
+  .switch input {
+    display: none;
+  }
+  .interruptor input:checked + .slider {
+    background-color: black;
+  }
+  .slider.round {
+    border-radius: 2.18rem;
+  }
+  .slider.round:before {
+    width: 50%;
+    height: 100%;
+    display: block;
+  }
+  /*AQUI FINALIZA OS TESTE*/
   .container {
     max-width: 1120px;
     margin-left: auto;
@@ -553,7 +601,6 @@ footer .social a:hover {
   .section {
     padding: 10rem 0;
   }
-
   .section header,
   #testimonials header {
     max-width: 32rem;
@@ -611,6 +658,10 @@ footer .social a:hover {
     order: 0; /*O order só funciona dentro de uma tag que tem atributo grid ouu se fosse display:flex*/
     max-width: 24rem;
     text-align: left;
+  }
+
+  #home .slider {
+    order: 2;
   }
 
   /*####################SOBRE#########################*/
